alignment corrected

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -210,6 +210,7 @@ a:visited {
     left: 1%;
     color: white;
     font-size: 150%;
+    margin-left: 7%;
 }
 
 .next {
@@ -218,6 +219,7 @@ a:visited {
     right: 1%;
     color: white;
     font-size: 150%;
+    margin-right: 10%;
 }
 
 .dot {
